# Syncora

./: .gitignore  LICENSE  README.md  requirements.txt
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/syncora/client/: DirectRtspPlayer.java  DirectUdpPlayer.java  MainActivity.java  RtpH264Assembler.java  SimplePeerObserver.java  SimpleSdpObserver.java  WebRtcPlayer.java
android/app/src/main/res/drawable/: tv_banner.xml
android/app/src/main/res/values/: strings.xml  styles.xml
native/kde-virtual-monitor/: CMakeLists.txt  main.c  org.syncora.virtualmonitor.desktop.in
scripts/: check_direct_pipeline.py  check_webrtc.py
static/: client.js  style.css
syncora/: __init__.py  audio.py  capture.py  config.py  direct_media.py  display.py  rtsp.py  server.py  udp.py  wayland.py  webrtc.py
templates/: index.html
tests/: test_audio.py  test_config.py  test_display.py  test_server.py  test_webrtc.py
